Implementation of /rocketWeather